hasGivenCredits